client/scss/components/_logo.scss
@keyframes tail-wag {
    from {
        transform: rotate(-3deg);
    }

    to {
        transform: rotate(7deg);
    }
}

.logo {
    display: block;
    color: #aaa;
    -webkit-font-smoothing: auto;
    position: relative;

    &:hover {
        color: $color-white;
    }
}

@include media-breakpoint-down(xs) {
    .logo {
        padding: 0 1.2em;
        margin: 0.9em 0;
        height: 28px;
        position: relative;
        display: flex;
        align-items: center;
    }
}

// Desktop styling (override mobile styling):
@include media-breakpoint-up(sm) {
    .logo {
        margin: 2em auto;
        text-align: center;
    }
}

.wagtail-logo-container__mobile {
    position: relative;
    margin-right: 10px;

    .wagtail-logo,
    .wagtail-logo-container__background {
        float: left;
    }

    .wagtail-logo,
    .wagtail-logo-container-inner {
        width: 20px;
    }

    .wagtail-logo {
        border: 0;
        margin-right: 1em;
    }

    .wagtail-logo-container__background {
        width: 28px;
        margin-right: 5px;
    }

    .wagtail-logo-container-inner {
        height: 25px;
    }

    &:hover {
        color: $color-white;
    }
}

.wagtail-logo-container__desktop {
    position: relative;
    width: 100px;
    height: 100px;
    background-color: #555;
    border-radius: 50%;

    .page404__bg & {
        background-color: transparent;
    }

    .wagtail-logo-container__background {
        position: absolute;
        top: -3px;
        left: 0;
    }

    .wagtail-logo-container-inner {
        width: 52px;
        height: 100px;
        margin: auto;
        position: relative;
    }
}

.wagtail-logo-container-inner,
.wagtail-logo-container__desktop.animated-logo-container {
    display: block;
    transition: all 0.25s cubic-bezier(0.28, 0.15, 0, 2.1);

    .wagtail-logo {
        display: block;
        left: 0;
        top: 0;
        width: 100%;
        height: 100%;
        position: absolute;
        transition: inherit;

        &.wagtail-logo__eye--open {
            // stylelint-disable-next-line declaration-no-important
            display: inline !important; // doesn't work without `!important`, likely a specificity issue
        }

        &.wagtail-logo__eye--closed {
            // stylelint-disable-next-line declaration-no-important
            display: none !important;
        }
    }

    // Wagtail 'serious' animation (nod):
    &.logo-serious {
        &:hover {
            transform: rotate(4deg);
        }
    }

    // Wagtail 'playful' animation (tail-wag, triggered by JS in base.html):
    &.logo-playful {
        &:hover {
            transform: rotate(8deg);
            transition: transform 1.2s ease;

            .wagtail-logo {
                // stylelint-disable max-nesting-depth
                &.wagtail-logo__tail {
                    animation: tail-wag 0.09s alternate;
                    animation-iteration-count: infinite;
                }

                &.wagtail-logo__eye--open {
                    // stylelint-disable-next-line declaration-no-important
                    display: none !important;
                }

                &.wagtail-logo__eye--closed {
                    // stylelint-disable-next-line declaration-no-important
                    display: inline !important;
                }
            }
        }
    }
}

